[Fix] Scrollbars

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -452,13 +452,13 @@ legend {
 }
  
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-box-shadow: inset 0 0 6px rgba(255,255,255,0.3); 
     border-radius: 10px;
 }
  
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+    -webkit-box-shadow: inset 0 0 6px rgba(255,255,255,0.5); 
 }
 
 
